--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "@prisma/client": "^4.16.1",
+    "@types/express-session": "^1.17.7",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0"
   }
